--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,24 +1,23 @@
 <%- include('./partials/header') %>
-<body id="home-body">
-    <!-- <img id="pet-petting"src="/images/200.webp" alt="pet-petting"> -->
-    <h1 id="home-header">Welcome To Petpawrazzi</h1>
+<body>
+    <h1>Welcome To Petpawrazzi</h1>
     
     <% if(allPosts.length){ %>
         <% allPosts.forEach(function(post){ %>
-        <div id="home-div">
-            <h3 id="petName-home"><%=post.petName.name%></h3>
-            <img id="home-petPic" src="<%=post.img%>" alt="petPic">
-            <div id="home-petData">
-                <p class="pet-data"><%=post.caption%></p>
-                <p class="pet-data">Posted By:</span> <%=post.author.name%> <span class="label">Date:</span> <%= new Date(post.createdAt).toLocaleDateString() %></p>
-                <p id="comments">Comments..</p>
+        <div>
+            <h3><%=post.petName.name%></h3>
+            <img class="img-fluid" src="<%=post.img%>" alt="petPic">
+            <div>
+                <p><%=post.caption%></p>
+                <p>Posted By:</span> <%=post.author.name%> <span class="label">Date:</span> <%= new Date(post.createdAt).toLocaleDateString() %></p>
+                <p>Comments..</p>
             </div>
             <%if(post.comments.length){%>
                 <ul>
                     <%post.comments.forEach(function(comment){ %>
                         <form action="/comment/<%=comment.id%>?_method=DELETE" method="POST">
                             <% if(user?._id.equals(comment.author.id)){ %>
-                                <li id="home-li"> <%=comment.author.name%>: <%=comment.content%> <input type="submit" value="Delete"></li>
+                                <li> <%=comment.author.name%>: <%=comment.content%> <input type="submit" value="Delete"></li>
                             <% } else {%>
                                 <li> <%=comment.author.name%>: <%=comment.content%></li>
                             <% } %>
@@ -26,11 +25,11 @@
                     <% }) %>
                 </ul>
             <%}%>
-                <form id="comments-home" action="posts/<%=post.id%>/comments" method="POST">
+                <form action="posts/<%=post.id%>/comments" method="POST">
                     <input type="hidden" name="post" value="<%=post.id%>">
                     <input type="hidden" name="author" value="<%=user.id%>">
                     <textarea name="content" cols="65" rows="10" placeholder="Add a comment"></textarea>
-                    <input id="com-btn-home" type="submit" value="⬆">
+                    <input type="submit" value="⬆">
                 </form>
             <% }) %>
         <% } else {%>
