--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,42 @@
-<% if (user) { %>
-    <nav>
-        <div id="header-links">
-                <a class="link" href="/home">HOME</a></td>
-                <div id="user-cont">
-                    <img src="<%=user.avatar%>" alt="avatar"> <span id="user-name"><%= user.name%></span>
-                </div>
-                <a class="link" href="/pets/new">Add Pets</a>
-                <a class="link" href="/users/<%=user.id%>">Profile</a>
-                <a class="link" href="/logout">LOGOUT</a>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <% if (user) { %>
+        <div class="container mt-3">
+            <ul class="nav nav-pills nav-justified">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/home">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <img src="<%=user.avatar%>" alt="avatar">
+                </li>
+                <li class="nav-item">
+                    <span>
+                        <%= user.name%>
+                    </span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pets/new">Add Pets</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/<%=user.id%>">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">LOGOUT</a>
+                </li>
+            </ul><br>
         </div>
-            <% } %>
-    </nav>
-<link rel='stylesheet' href='/stylesheets/style.css' />
+        <% } %>
+</body>
+
+</html>
