--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,9 +15,12 @@
                             <span class="label">Date:</span> <%= new Date(post.createdAt).toLocaleDateString() %> Posted By:</span> <%=post.author.name%><br>
                         </p>
                     </div>
-                    <div class="card-body">
+                    <!-- <button data-bs-toggle="collapse" data-bs-target="#comments">View Comments</button> -->
+                    <div id="comments" class="card-body">
                         <%if(post.comments.length){%>
-                            <ul>
+                            <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Show Comments</button>
+                            <!-- <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Show Comments</button> -->
+                            <ul id="demo" class="collapse">
                                 <%post.comments.forEach(function(comment){ %>
                                     <form action="/comment/<%=comment.id%>?_method=DELETE" method="POST">
                                         <% if(user?._id.equals(comment.author.id)){ %>
@@ -37,7 +40,7 @@
                         <form action="posts/<%=post.id%>/comments" method="POST">
                             <input type="hidden" name="post" value="<%=post.id%>">
                             <input type="hidden" name="author" value="<%=user.id%>">
-                            <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
+                            <textarea class="form-control" rows="5" id="comment" name="content"></textarea>
                             <input type="submit" class="btn btn-outline-success" value="Add Comment">
                         </form>
                     </div>
